--- a/hyperapp/sample/sample_list.resources.yaml
+++ b/hyperapp/sample/sample_list.resources.yaml
@@ -12,74 +12,67 @@ import:
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_resource_association
-- legacy_type.partial:partial
 - legacy_type.python_module:python_module
 - legacy_type.sample_list:item
 - legacy_type.sample_list:open_sample_list_d
 - legacy_type.sample_list:sample_list
 - legacy_type.sample_list:sample_list_d
 - legacy_type.sample_list:sample_list_open_d
+- resource.global_command_ctr:global_command_ctr.module
 associations:
 - _type: legacy_type.global_command:global_command_association
-  command: open_sample_list_command
+  command: open_sample_list.command
 - _type: legacy_type.impl:impl_association
   piece_t: legacy_type.sample_list:sample_list
-  ctr_fn: sample_list_partial
+  ctr_fn: SampleList
   spec: sample_list_spec
 - _type: legacy_type.impl:python_object_association
   t: legacy_type.sample_list:sample_list
-  function: sample_list_partial
+  function: SampleList
 - _type: legacy_type.lcs:lcs_set_resource_association
   dir:
   - sample_list_d
   - object_commands_d
-  value: sample_list_open_command
+  value: sample_list.open.command
 definitions:
+  SampleList:
+    _type: legacy_type.attribute:attribute
+    object: sample_list.module
+    attr_name: SampleList
   object_commands_d:
     _type: legacy_type.call:call
     function: legacy_type.command:object_commands_d
-  open_sample_list_attribute:
+  open_sample_list:
     _type: legacy_type.attribute:attribute
-    object: sample_list_module
+    object: sample_list.module
     attr_name: open_sample_list
-  open_sample_list_command:
+  open_sample_list.command:
     _type: legacy_type.impl:global_command_impl
-    function: open_sample_list_partial
+    function: open_sample_list
     dir: open_sample_list_d
   open_sample_list_d:
     _type: legacy_type.call:call
     function: legacy_type.sample_list:open_sample_list_d
-  open_sample_list_partial:
-    _type: legacy_type.partial:partial
-    function: open_sample_list_attribute
-    params: {}
-  sample_list_attribute:
-    _type: legacy_type.attribute:attribute
-    object: sample_list_module
-    attr_name: SampleList
-  sample_list_d:
-    _type: legacy_type.call:call
-    function: legacy_type.sample_list:sample_list_d
-  sample_list_module:
+  sample_list.module:
     _type: legacy_type.python_module:python_module
     module_name: sample_list
     file_name: sample_list.dyn.py
     import_list:
+      global_command_ctr: resource.global_command_ctr:global_command_ctr.module
       htypes.sample_list.item: legacy_type.sample_list:item
       htypes.sample_list.sample_list: legacy_type.sample_list:sample_list
-  sample_list_open_command:
+  sample_list.open.command:
     _type: legacy_type.impl:method_command_impl
     method: open
     params:
     - current_key
     dir: sample_list_open_d
+  sample_list_d:
+    _type: legacy_type.call:call
+    function: legacy_type.sample_list:sample_list_d
   sample_list_open_d:
     _type: legacy_type.call:call
     function: legacy_type.sample_list:sample_list_open_d
-  sample_list_partial:
-    _type: legacy_type.partial:partial
-    function: sample_list_attribute
-    params: {}
   sample_list_spec:
     _type: legacy_type.impl:list_spec
     key_attribute: key
