--- a/hyperapp/resource/test/test_resources/test_resources.resources.yaml
+++ b/hyperapp/resource/test/test_resources/test_resources.resources.yaml
@@ -1,48 +1,48 @@
 import:
-  - legacy_module.resource.test.test_resources.sample_module
-  - legacy_service.mosaic
-  - legacy_service.web
-  - legacy_service.peer_registry
-  - legacy_service.rpc_call_factory
-  - legacy_service.mock_identity
-  - legacy_type.attribute.attribute
-  - legacy_type.partial.partial
-  - legacy_type.call.call
-  - legacy_type.resource_service.list_service
-  - legacy_type.test_resources.test_d
+  - legacy_module.resource.test.test_resources:sample_module
+  - legacy_service:mosaic
+  - legacy_service:web
+  - legacy_service:peer_registry
+  - legacy_service:rpc_call_factory
+  - legacy_service:mock_identity
+  - legacy_type.attribute:attribute
+  - legacy_type.partial:partial
+  - legacy_type.call:call
+  - legacy_type.resource_service:list_service
+  - legacy_type.test_resources:test_d
 
 definitions:
 
   sample_servant_factory:
-    _type: legacy_type.attribute.attribute
-    object: legacy_module.resource.test.test_resources.sample_module
+    _type: legacy_type.attribute:attribute
+    object: legacy_module.resource.test.test_resources:sample_module
     attr_name: sample_servant
 
   sample_servant_partial:
-    _type: legacy_type.partial.partial
+    _type: legacy_type.partial:partial
     function: sample_servant_factory
     params:
-      mosaic: legacy_service.mosaic
-      web: legacy_service.web
-      peer_registry: legacy_service.peer_registry
-      rpc_call_factory: legacy_service.rpc_call_factory
+      mosaic: legacy_service:mosaic
+      web: legacy_service:web
+      peer_registry: legacy_service:peer_registry
+      rpc_call_factory: legacy_service:rpc_call_factory
 
   sample_servant:
-    _type: legacy_type.call.call
+    _type: legacy_type.call:call
     function: sample_servant_partial
 
   servant_list:
-    _type: legacy_type.attribute.attribute
+    _type: legacy_type.attribute:attribute
     object: sample_servant
     attr_name: list
 
   test_d:
-    _type: legacy_type.call.call
-    function: legacy_type.test_resources.test_d
+    _type: legacy_type.call:call
+    function: legacy_type.test_resources:test_d
 
   sample_list_service:
-    _type: legacy_type.resource_service.list_service
-    identity: legacy_service.mock_identity
+    _type: legacy_type.resource_service:list_service
+    identity: legacy_service:mock_identity
     function: servant_list
     dir: test_d
     commands: []
